Fixed path params case
