# docs/api.yaml
@@ -70,7 +70,7 @@ paths:
         401:
           description: "Client is not authorized"
 
-  /showtimes/{showtimeId}:
+  /showtimes/{showtime_id}:
     patch:
       summary: "Modify movie showtime"
       security:
@@ -114,7 +114,7 @@ paths:
         404:
           description: "Showtime with given ID was not found"
 
-  /movies/{movieId}:
+  /movies/{movie_id}:
     get:
       summary: "Get movie details"
       parameters:
@@ -133,7 +133,7 @@ paths:
         404:
           description: "Movie with given ID was not found"
 
-  /movies/{movieId}/rating:
+  /movies/{movie_id}/rating:
     post:
       summary: "Rate given movie"
       security:
