# src/main/kotlin/cinema/movies/MovieController.kt
@@ -8,8 +8,8 @@ import org.springframework.web.bind.annotation.RestController
 @RestController
 class MovieController(val movieService: MovieService) {
 
-    @GetMapping("/movies/{movieId}")
-    fun getMovieDetails(@PathVariable movieId: MovieId): Movie {
+    @GetMapping("/movies/{movie_id}")
+    fun getMovieDetails(@PathVariable("movie_id") movieId: MovieId): Movie {
         return movieService.getMovieDetails(movieId) ?: throw MovieNotFound(movieId)
     }
 }
